refactor: java 11 friendly